--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <li><a href="Jurusan.html">Jurusan</a></li>
           <li><a href="Galeri.html">Galeri</a></li>
 
-          <li class="active"><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
 
 
         </ul>
