--- a/jurusan.html
+++ b/jurusan.html
@@ -74,10 +74,10 @@
             </ul>
           </li>
 
-          <li><a href="Jurusan.html">Jurusan</a></li>
-          <li><a href="Galeri.html">Galeri</a></li>
+          <li class="active"><a href="jurusan.html">Jurusan</a></li>
+          <li><a href="galeri.html">Galeri</a></li>
 
-          <li class="active"><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
 
 
         </ul>
