--- a/contact.html
+++ b/contact.html
@@ -74,8 +74,8 @@
             </ul>
           </li>
 
-          <li><a href="Jurusan.html">Jurusan</a></li>
-          <li><a href="Galeri.html">Galeri</a></li>
+          <li><a href="jurusan.html">Jurusan</a></li>
+          <li><a href="galeri.html">Galeri</a></li>
 
           <li class="active"><a href="contact.html">Contact</a></li>
 
