--- a/ekskul.html
+++ b/ekskul.html
@@ -66,10 +66,10 @@
             </ul>
           </li>
 
-          <li><a href="Jurusan.html">Jurusan</a></li>
-          <li><a href="Galeri.html">Galeri</a></li>
+          <li><a href="jurusan.html">Jurusan</a></li>
+          <li><a href="galeri.html">Galeri</a></li>
 
-          <li class="active"><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
 
 
         </ul>
