--- a/ekskul.html
+++ b/ekskul.html
@@ -42,7 +42,7 @@
       <nav class="nav-menu d-none d-lg-block">
 
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
 
           <li class="drop-down"><a href="#">Profil</a>
             <ul>
@@ -50,7 +50,7 @@
               <li><a href="team.html">Team</a></li>
               <li><a href="testimonials.html">Testimonials</a></li>
 
-              <li class="drop-down"><a href="#">Ekskul</a>
+              <li class="drop-down"><a href="eks">Ekskul</a>
                 <ul>
                   <li><a href="ekskul.html">Paskibra</a></li>
                   <li><a href="ekskul.html">PMR</a></li>
