--- a/galeri.html
+++ b/galeri.html
@@ -49,7 +49,7 @@
       <nav class="nav-menu d-none d-lg-block">
 
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
 
           <li class="drop-down"><a href="#">profil</a>
             <ul>
@@ -74,10 +74,10 @@
             </ul>
           </li>
 
-          <li><a href="Jurusan.html">Jurusan</a></li>
-          <li><a href="Galeri.html">Galeri</a></li>
+          <li><a href="jurusan.html">Jurusan</a></li>
+          <li class="active"><a href="galeri.html">Galeri</a></li>
 
-          <li class="active"><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
 
 
         </ul>
