--- a/profil.html
+++ b/profil.html
@@ -53,7 +53,7 @@
 
           <li class="drop-down"><a href="#">Profil</a>
             <ul>
-              <li><a href="profil.html">Profil</a></li>
+              <li class="active"><a href="profil.html">Profil</a></li>
               <li><a href="team.html">Team</a></li>
               <li><a href="testimonials.html">Testimonials</a></li>
 
@@ -74,10 +74,10 @@
             </ul>
           </li>
 
-          <li><a href="Jurusan.html">Jurusan</a></li>
-          <li><a href="Galeri.html">Galeri</a></li>
+          <li><a href="jurusan.html">Jurusan</a></li>
+          <li><a href="galeri.html">Galeri</a></li>
    
-          <li class="active"><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
 
 
         </ul>
