--- a/testimonials.html
+++ b/testimonials.html
@@ -49,13 +49,13 @@
       <nav class="nav-menu d-none d-lg-block">
 
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
 
           <li class="drop-down"><a href="#">Profil</a>
             <ul>
               <li><a href="profil.html">Profil</a></li>
               <li><a href="team.html">Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li>
+              <li class="active"><a href="testimonials.html">Testimonials</a></li>
 
               <li class="drop-down"><a href="#">ekstrakulikuler</a>
                 <ul>
@@ -74,10 +74,10 @@
             </ul>
           </li>
 
-          <li><a href="Jurusan.html">Jurusan</a></li>
-          <li><a href="Galeri.html">Galeri</a></li>
+          <li><a href="jurusan.html">Jurusan</a></li>
+          <li><a href="galeri.html">Galeri</a></li>
 
-          <li class="active"><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
 
 
         </ul>
